made the link of the categories work in the home page

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -107,7 +107,7 @@
                           </div> {% endcomment %}
         
                           <h3 class="h3 card-title">
-                            <a href="#">{{categorie.nom}}</a>
+                            <a href="/offers?categorie={{categorie.id}}">{{categorie.nom}}</a>
                           </h3>
         
                           <p class="card-text">
