--- a/templates/pages/Offers.html
+++ b/templates/pages/Offers.html
@@ -171,7 +171,7 @@
                                 <span>/ per person</span>
                               </p>
             
-                              <a class="btn btn-secondary" href="{% url 'reserver_offre' offer.id %}">Book Now</a>
+                              <a class="btn btn-secondary" href="{% url 'offer_details' offer.id %}">Consulter</a>
             
                             </div>
             
