--- a/templates/pages/offer.html
+++ b/templates/pages/offer.html
@@ -1,1 +1,143 @@
-<h1>hello</h1>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tourly - Travel Agency</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <style>
+            #sidebar{
+                width: 20%;
+                flex: 0 0 auto;
+                padding: 10px;
+                margin: 0;
+                float: left;
+            }
+            #filterSection div {
+                margin-bottom: 25px; /* Adjust the value as needed to control the space between filters */
+            }
+
+    </style>
+    <link rel="shortcut icon" href="{% static 'images/favicon.svg' %}" type="image/svg+xml">
+
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet">
+</head>
+<body id="top">
+
+    {%  include "pages/navbar.html"  %}
+
+    <main>
+        <main>
+            <article>
+                <section class="hero" id="home">  
+                    {% comment %} <div class="container" style="flex: 1;width:1000px"> {% endcomment %}
+                        <div class="package-card mx-5">
+          
+                          <figure class="card-banner">
+                              <img src="{{ offer.image.url }}" alt="Experience The Great Holiday On Beach" loading="lazy" style="width: 300px; height: 250px;">
+                          </figure>
+          
+                          <div class="card-content">
+          
+                            <h3 class="h3 card-title">{{ offer.titre }}</h3>
+          
+                            <p class="card-text">
+                              {{ offer.description }}
+                            </p>
+          
+                            <ul class="card-meta-list">
+          
+                              <li class="card-meta-item">
+                                <div class="meta-box">
+                                  <ion-icon name="calendar"></ion-icon>
+                                  <p class="text">{{ offer.date_debut|date:"d M Y" }}</p>
+                                </div>
+                              </li>
+          
+                              <li class="card-meta-item">
+                                <div class="meta-box">
+                                  <ion-icon name="people"></ion-icon>
+          
+                                  <p class="text">pax: {{ offer.capacite }}</p>
+                                </div>
+                              </li>
+          
+                              <li class="card-meta-item">
+                                <div class="meta-box">
+                                  <ion-icon name="location"></ion-icon>
+          
+                                  <p class="text">{{ offer.lieu }}</p>
+                                </div>
+                              </li>
+          
+                            </ul>
+          
+                          </div>
+          
+                          <div class="card-price">
+          
+                            <p class="price">
+                              ${{ offer.prix }}
+                              <span>/ per person</span>
+                            </p>
+          
+                          </div>
+          
+                        </div>
+                        <div class="package-card mx-5 p-3">
+                            <input type="hidden" id="prix_offre" value={{offer.prix}}>
+                            <input type="hidden" id="capacite_offre" value={{offer.capacite}}>
+                            <div>
+                                <h5 > Nombre de personnes </h5>
+                                <input type="number" id="nombre_personnes" name="nombre_personnes" class="form-control w-50" style="margin:auto" placeholder="" min="1" max="{{offer.capacite}}" value="1" onchange="calculPrix()" onkeyup="calculPrix()">
+                            </div>
+                            <div>
+                                <h5 > Prix Total </h5>
+                                <input type="number" id="prix_total" name="prix_total" class="form-control w-50" style="margin:auto" placeholder="" min="0" disabled>
+                            </div>
+                            <div>
+                                <a class="btn btn-secondary" href="{% url 'offer_details' offer.id %}">Paiment</a>
+                            </div>
+                            <script>
+                                function calculPrix(){
+                                    nb_p = document.getElementById('nombre_personnes')
+                                    n = nb_p.value
+                                    p = parseInt(document.getElementById('prix_offre').value)
+                                    c = parseInt(document.getElementById('capacite_offre').value)
+                                    if(n != ""){
+                                        n = parseInt(n);
+                                        if(n > c) {
+                                            n = c         
+                                        }
+                                        if(n < 1) {
+                                            n = 1
+                                        }
+                                        nb_p.value = n
+                                        total = n*p;
+                                        document.getElementById('prix_total').value = total;
+                                    }
+                                    
+                                }
+                            </script>
+                            
+                        </div>
+      
+              {% comment %} </div>   {% endcomment %}
+                  </section>    
+            </article>
+        </main>
+        
+        {%  include "pages/footer.html"  %}
+        
+    </main>
+    
+    
+</body>
+</html>
