--- a/templates/clientdashboard/client.html
+++ b/templates/clientdashboard/client.html
@@ -112,7 +112,8 @@
                                                   <span class="label label-warning">Expirée</span>
                                                 {% endif %}
                                               </td>
-                                              <td><a title="Landing Page" href="settings.html" aria-expanded="false"><span class="fa fa-cog"></a></span></td>
+                                              <td><a title="PDF" href="{%url 'pdf_view'%}" aria-expanded="false"><span class="fa fa-file-pdf-o"></a></span>
+                                              </td>
                                           </tr>
                                         {% endfor %}
                                       </tbody>
