--- a/templates/clientdashboard/contactus.html
+++ b/templates/clientdashboard/contactus.html
@@ -85,21 +85,33 @@
                                   <h1>Send us a message</h1>
                               </div>
                           </div>
-                          <form action="">
+                          <form action="{% url 'client_profil_message'%}" name="contact_us" id="contact_us_Form" method="POST">
+                            {% csrf_token %}
+                            <div class="input-box">
+                              {% for msg in messages %}
+                                    <br>
+                                      <div class="alert alert-success" role="alert">
+                                          {{ msg }}
+                                          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                      </div>
+                              {% endfor %}
+                            </div>
                             <div class="devit-card-custom">
                                 <div class="form-group">
-                                    <input name="coursename" type="text" class="form-control" placeholder="Full Name">
+                                    <input name="name" type="text" class="form-control" placeholder="Full Name">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Email">
+                                    <input type="email" name ="email" class="form-control" placeholder="Email">
                                 </div>
                                 <div class="form-group">
-                                    <textarea name="description" placeholder="Description"></textarea>
+                                    <textarea name="message" placeholder="Enter your message"></textarea>
                                 </div>
                                 <button type="submit" class="btn btn-primary waves-effect waves-light">Submit</button>
                             </div>
 
-                          
+                          </form>
                       </div>
                   </div>
               </div>
