--- a/templates/pages/offer.html
+++ b/templates/pages/offer.html
@@ -38,95 +38,113 @@
             <article>
                 <section class="hero" id="home">  
                     {% comment %} <div class="container" style="flex: 1;width:1000px"> {% endcomment %}
-                        <div class="package-card mx-5">
-          
+                        <div class="package-card mx-5 " style="margin-top:100px; margin-bottom: 0px">
                           <figure class="card-banner">
-                              <img src="{{ offer.image.url }}" alt="Experience The Great Holiday On Beach" loading="lazy" style="width: 300px; height: 250px;">
+                            <img src="{{ offer.image.url }}" alt="Experience The Great Holiday On Beach" loading="lazy" style="width: 300px; height: 250px;">
                           </figure>
-          
+
                           <div class="card-content">
-          
+
                             <h3 class="h3 card-title">{{ offer.titre }}</h3>
-          
+
                             <p class="card-text">
                               {{ offer.description }}
                             </p>
-          
+
                             <ul class="card-meta-list">
-          
+
                               <li class="card-meta-item">
                                 <div class="meta-box">
                                   <ion-icon name="calendar"></ion-icon>
-                                  <p class="text">{{ offer.date_debut|date:"d M Y" }}</p>
+                                  <p class="text">Start Date: {{ offer.date_debut|date:"d M Y" }}</p>
                                 </div>
                               </li>
-          
+
+                              <li class="card-meta-item">
+                                <div class="meta-box">
+                                  <ion-icon name="calendar"></ion-icon>
+                                  <p class="text">End Date: {{ offer.date_fin|date:"d M Y" }}</p>
+                                </div>
+                              </li>
+
                               <li class="card-meta-item">
                                 <div class="meta-box">
                                   <ion-icon name="people"></ion-icon>
-          
-                                  <p class="text">pax: {{ offer.capacite }}</p>
+                                  <p class="text">Capacity: {{ offer.capacite }}</p>
                                 </div>
                               </li>
-          
+
                               <li class="card-meta-item">
                                 <div class="meta-box">
                                   <ion-icon name="location"></ion-icon>
-          
-                                  <p class="text">{{ offer.lieu }}</p>
+                                  <p class="text">Location: {{ offer.lieu }}</p>
                                 </div>
                               </li>
-          
+
+                              <li class="card-meta-item">
+                                <div class="meta-box">
+                                  <ion-icon name="pricetag"></ion-icon>
+                                  <p class="text">Category: {{ offer.categorie.nom }}</p>
+                                </div>
+                              </li>
+
+                              <li class="card-meta-item">
+                                <div class="meta-box">
+                                  <ion-icon name="percent"></ion-icon>
+                                  <p class="text">Promotion: {{ offer.promotion.remise }}% off</p>
+                                </div>
+                              </li>
+
                             </ul>
-          
+
                           </div>
-          
+
                           <div class="card-price">
-          
+
                             <p class="price">
                               ${{ offer.prix }}
                               <span>/ per person</span>
                             </p>
-          
+
                           </div>
-          
+
                         </div>
-                        <div class="package-card mx-5 p-3">
-                            <input type="hidden" id="prix_offre" value={{offer.prix}}>
-                            <input type="hidden" id="capacite_offre" value={{offer.capacite}}>
-                            <div>
-                                <h5 > Nombre de personnes </h5>
-                                <input type="number" id="nombre_personnes" name="nombre_personnes" class="form-control w-50" style="margin:auto" placeholder="" min="1" max="{{offer.capacite}}" value="1" onchange="calculPrix()" onkeyup="calculPrix()">
-                            </div>
-                            <div>
-                                <h5 > Prix Total </h5>
-                                <input type="number" id="prix_total" name="prix_total" class="form-control w-50" style="margin:auto" placeholder="" min="0" disabled>
-                            </div>
-                            <div>
-                                <a class="btn btn-secondary" href="{% url 'offer_details' offer.id %}">Paiment</a>
-                            </div>
-                            <script>
-                                function calculPrix(){
-                                    nb_p = document.getElementById('nombre_personnes')
-                                    n = nb_p.value
-                                    p = parseInt(document.getElementById('prix_offre').value)
-                                    c = parseInt(document.getElementById('capacite_offre').value)
-                                    if(n != ""){
-                                        n = parseInt(n);
-                                        if(n > c) {
-                                            n = c         
-                                        }
-                                        if(n < 1) {
-                                            n = 1
-                                        }
-                                        nb_p.value = n
-                                        total = n*p;
-                                        document.getElementById('prix_total').value = total;
-                                    }
-                                    
+
+                        <div class="package-card mx-5 p-3" style="margin-top:-100px">
+                          <div>
+                            <h5>Number of People</h5>
+                            <input type="number" id="nombre_personnes" name="nombre_personnes" class="form-control w-50" style="margin:auto" placeholder="" min="1" max="{{offer.capacite}}" value="1" onchange="calculPrix()" onkeyup="calculPrix()">
+                          </div>
+                          <div>
+                            <h5>Total Price</h5>
+                            <input type="number" id="prix_total" name="prix_total" class="form-control w-50" style="margin:auto" placeholder="" min="0" disabled>
+                          </div>
+                          <div style="margin-top:15px">
+                            <a class="btn btn-secondary" href="{% url 'offer_details' offer.id %}">Payment</a>
+                          </div>
+                          <script>
+                            function calculPrix() {
+                              const offerPrice = parseInt("{{ offer.prix }}");
+                              const offerCapacity = parseInt("{{ offer.capacite }}");
+                              const promotion = parseFloat("{{ offer.promotion.remise }}");
+                              const nb_p = document.getElementById('nombre_personnes');
+                              const n = parseInt(nb_p.value);
+                              
+                              if (n !== "") {
+                                let quantity = n;
+                                if (quantity > offerCapacity) {
+                                  quantity = offerCapacity;
                                 }
-                            </script>
-                            
+                                if (quantity < 1) {
+                                  quantity = 1;
+                                }
+                                nb_p.value = quantity;
+                                const total = quantity * offerPrice;
+                                document.getElementById('prix_total').value = total - total * promotion;
+                              }
+                            }
+                          </script>
+
                         </div>
       
               {% comment %} </div>   {% endcomment %}
