fixed some minor bugs

--- a/templates/pages/Offers.html
+++ b/templates/pages/Offers.html
@@ -188,6 +188,11 @@
         {%  include "pages/footer.html"  %}
         
     </main>
+    <script>
+        function scrollToSection() {
+            document.getElementById('package').scrollIntoView({ behavior: 'smooth' });
+        }
+    </script>
     
     
 </body>
