--- a/templates/pages/Package.html
+++ b/templates/pages/Package.html
@@ -25,10 +25,10 @@
               <section class="hero" id="home">
                 <div class="container">
         
-                  <h2 class="h1 hero-title">Packeges</h2>
-                  <p class="hero-text">Checkout Our Packeges</p>
+                  <h2 class="h1 hero-title">Catgories</h2>
+                  <p class="hero-text">Checkout Our Categories</p>
                   <div class="btn-group">
-                    <button class="btn btn-secondary" onclick="scrollToSection()">Packeges</button>
+                    <button class="btn btn-secondary" onclick="scrollToSection()">Categories</button>
                   </div>
 
                 </div>
