--- a/templates/admindashboard/newclient.html
+++ b/templates/admindashboard/newclient.html
@@ -62,7 +62,7 @@
                             <div class="form-group">
                               <div class="form-check">
                                 <label class="form-check-label">
-                                  <input type="checkbox" class="form-check-input" name="active" checked>
+                                  <input type="checkbox" class="form-check-input" name="is_active" checked>
                                   Active/Inactive
                                 </label>
                               </div>
