--- a/templates/pages/navbar.html
+++ b/templates/pages/navbar.html
@@ -72,7 +72,7 @@
                     </li>
 
                     <li>
-                        <a href="{% url 'package_page' %}" class="navbar-link" data-nav-link>Packeges</a>
+                        <a href="{% url 'package_page' %}" class="navbar-link" data-nav-link>Categories</a>
                     </li>
 
                     <li>
