--- a/templates/pages/Checkout.html
+++ b/templates/pages/Checkout.html
@@ -208,7 +208,7 @@
                           <input type="text" class="inputbox" name="name" required />
                           <p>Email</p>
                           <input type="email" class="inputbox" name="email" required />
-                          <p>Total : $</p>
+                          <p>Total : {{prix_total}}$</p>
                               <label for="card-element">Credit or debit card</label>
                               <div id="card-element">
                                 <!-- a stripe element will be inserted here -->
