--- a/templates/admindashboard/index.html
+++ b/templates/admindashboard/index.html
@@ -41,8 +41,8 @@
                     <div class="row">
                       <div class="col-9">
                         <div class="d-flex align-items-center align-self-start">
-                          <h3 class="mb-0">$12.34</h3>
-                          <p class="text-success ml-2 mb-0 font-weight-medium">+3.5%</p>
+                          <h3 class="mb-0">{{current_month}}</h3>
+                          <p class="text-success ml-2 mb-0 font-weight-medium">+{{reservations_monthly_growth}}%</p>
                         </div>
                       </div>
                       <div class="col-3">
@@ -51,7 +51,7 @@
                         </div>
                       </div>
                     </div>
-                    <h6 class="text-muted font-weight-normal">Potential growth</h6>
+                    <h6 class="text-muted font-weight-normal">Months Reservation</h6>
                   </div>
                 </div>
               </div>
@@ -61,8 +61,8 @@
                     <div class="row">
                       <div class="col-9">
                         <div class="d-flex align-items-center align-self-start">
-                          <h3 class="mb-0">$17.34</h3>
-                          <p class="text-success ml-2 mb-0 font-weight-medium">+11%</p>
+                          <h3 class="mb-0">${{current_month_revenue}}</h3>
+                          <p class="text-success ml-2 mb-0 font-weight-medium">{{revenu_monthly_growth}}%</p>
                         </div>
                       </div>
                       <div class="col-3">
@@ -71,7 +71,7 @@
                         </div>
                       </div>
                     </div>
-                    <h6 class="text-muted font-weight-normal">Revenue current</h6>
+                    <h6 class="text-muted font-weight-normal">Month Revenue</h6>
                   </div>
                 </div>
               </div>
@@ -81,8 +81,8 @@
                     <div class="row">
                       <div class="col-9">
                         <div class="d-flex align-items-center align-self-start">
-                          <h3 class="mb-0">$12.34</h3>
-                          <p class="text-danger ml-2 mb-0 font-weight-medium">-2.4%</p>
+                          <h3 class="mb-0">{{today_reservations}}</h3>
+                          <p class="text-danger ml-2 mb-0 font-weight-medium">{{reservations_daily_growth}}%</p>
                         </div>
                       </div>
                       <div class="col-3">
@@ -91,7 +91,7 @@
                         </div>
                       </div>
                     </div>
-                    <h6 class="text-muted font-weight-normal">Daily Income</h6>
+                    <h6 class="text-muted font-weight-normal">Today's reservations</h6>
                   </div>
                 </div>
               </div>
@@ -101,8 +101,8 @@
                     <div class="row">
                       <div class="col-9">
                         <div class="d-flex align-items-center align-self-start">
-                          <h3 class="mb-0">$31.53</h3>
-                          <p class="text-success ml-2 mb-0 font-weight-medium">+3.5%</p>
+                          <h3 class="mb-0">${{today_revenue}}</h3>
+                          <p class="text-success ml-2 mb-0 font-weight-medium">{{revenu_daily_growth}}%</p>
                         </div>
                       </div>
                       <div class="col-3">
@@ -111,7 +111,7 @@
                         </div>
                       </div>
                     </div>
-                    <h6 class="text-muted font-weight-normal">Expense current</h6>
+                    <h6 class="text-muted font-weight-normal">Today's Revenue</h6>
                   </div>
                 </div>
               </div>
@@ -132,16 +132,15 @@
                                 </label>
                               </div>
                             </th>
-                            <th> Client Name </th>
-                            <th> Order No </th>
-                            <th> Product Cost </th>
-                            <th> Project </th>
-                            <th> Payment Mode </th>
-                            <th> Start Date </th>
-                            <th> Payment Status </th>
+                            <th> Nom du Client </th>
+                            <th> N° </th>
+                            <th> Prix total </th>
+                            <th> Date </th>
+                            <th> Status </th>
                           </tr>
                         </thead>
                         <tbody>
+                          {% for reservation in reservations %}
                           <tr>
                             <td>
                               <div class="form-check form-check-muted m-0">
@@ -151,102 +150,21 @@
                               </div>
                             </td>
                             <td>
-                              <img src="{% static 'assets/images/faces/face1.jpg'%}" alt="image" />
-                              <span class="pl-2">Henry Klein</span>
+                              <img src="{{ reservation.utilisateur.image.url }}" alt="" />
+                              <span class="pl-2">{{ reservation.utilisateur.first_name }} {{  reservation.utilisateur.last_name }}</span>
                             </td>
-                            <td> 02312 </td>
-                            <td> $14,500 </td>
-                            <td> Dashboard </td>
-                            <td> Credit card </td>
-                            <td> 04 Dec 2019 </td>
+                            <td> {{ reservation.id }} </td>
+                            <td> {{ reservation.prix }} </td>
+                            <td> {{ reservation.date}} </td>
                             <td>
-                              <div class="badge badge-outline-success">Approved</div>
+                              {% if reservation.status == True %}
+                                <span class="badge badge-outline-success">Active</span>
+                              {% else %}
+                                <span class="badge badge-outline-warning">Expirée</span>
+                              {% endif %}
                             </td>
                           </tr>
-                          <tr>
-                            <td>
-                              <div class="form-check form-check-muted m-0">
-                                <label class="form-check-label">
-                                  <input type="checkbox" class="form-check-input">
-                                </label>
-                              </div>
-                            </td>
-                            <td>
-                              <img src="{% static 'assets/images/faces/face2.jpg'%}" alt="image" />
-                              <span class="pl-2">Estella Bryan</span>
-                            </td>
-                            <td> 02312 </td>
-                            <td> $14,500 </td>
-                            <td> Website </td>
-                            <td> Cash on delivered </td>
-                            <td> 04 Dec 2019 </td>
-                            <td>
-                              <div class="badge badge-outline-warning">Pending</div>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <div class="form-check form-check-muted m-0">
-                                <label class="form-check-label">
-                                  <input type="checkbox" class="form-check-input">
-                                </label>
-                              </div>
-                            </td>
-                            <td>
-                              <img src="{% static 'assets/images/faces/face5.jpg'%}" alt="image" />
-                              <span class="pl-2">Lucy Abbott</span>
-                            </td>
-                            <td> 02312 </td>
-                            <td> $14,500 </td>
-                            <td> App design </td>
-                            <td> Credit card </td>
-                            <td> 04 Dec 2019 </td>
-                            <td>
-                              <div class="badge badge-outline-danger">Rejected</div>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <div class="form-check form-check-muted m-0">
-                                <label class="form-check-label">
-                                  <input type="checkbox" class="form-check-input">
-                                </label>
-                              </div>
-                            </td>
-                            <td>
-                              <img src="{% static 'assets/images/faces/face3.jpg'%}" alt="image" />
-                              <span class="pl-2">Peter Gill</span>
-                            </td>
-                            <td> 02312 </td>
-                            <td> $14,500 </td>
-                            <td> Development </td>
-                            <td> Online Payment </td>
-                            <td> 04 Dec 2019 </td>
-                            <td>
-                              <div class="badge badge-outline-success">Approved</div>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <div class="form-check form-check-muted m-0">
-                                <label class="form-check-label">
-                                  <input type="checkbox" class="form-check-input">
-                                </label>
-                              </div>
-                            </td>
-                            <td>
-                              <img src="{% static 'assets/images/faces/face4.jpg'%}" alt="image" />
-                              <span class="pl-2">Sallie Reyes</span>
-                            </td>
-                            <td> 02312 </td>
-                            <td> $14,500 </td>
-                            <td> Website </td>
-                            <td> Credit card </td>
-                            <td> 04 Dec 2019 </td>
-                            <td>
-                              <div class="badge badge-outline-success">Approved</div>
-                            </td>
-                          </tr>
+                          {% endfor %}
                         </tbody>
                       </table>
                     </div>
