--- a/templates/clientdashboard/navbar.html
+++ b/templates/clientdashboard/navbar.html
@@ -42,7 +42,7 @@
                                         <li class="nav-item">
                                             <a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle">
                                                     <img src="img/product/pro4.jpg" alt="" />
-                                                    <span class="admin-name">Prof.Anderson</span>
+                                                    <span class="admin-name">{{request.user.first_name}} {{request.user.last_name}}</span>
                                                     <i class="fa fa-angle-down edu-icon edu-down-arrow"></i>
                                                 </a>
                                             <ul role="menu" class="dropdown-header-top author-log dropdown-menu animated zoomIn">
