--- a/templates/clientdashboard/navbar.html
+++ b/templates/clientdashboard/navbar.html
@@ -48,7 +48,7 @@
                                             <ul role="menu" class="dropdown-header-top author-log dropdown-menu animated zoomIn">
                                                 <li><a href="{% url "clientsettings" %}"><span class="edu-icon edu-settings author-log-ic"></span>Settings</a>
                                                 </li>
-                                                <li><a href="#"><span class="edu-icon edu-locked author-log-ic"></span>Log Out</a>
+                                                <li><a href="{% url 'logout' %}"><span class="edu-icon edu-locked author-log-ic"></span>Log Out</a>
                                                 </li>
                                             </ul>
                                         </li>
