--- a/templates/pdf_template.html
+++ b/templates/pdf_template.html
@@ -20,7 +20,7 @@
     <body>
         <!-- Content for Static Frame 'header_frame' -->
         <div id="header_content">
-            <h3>Dennnis Ivanov Company</h3>
+            <h3>Tourly Ivanov Company</h3>
         </div>
     
         <!-- Content for Static Frame 'footer_frame' -->
@@ -31,16 +31,16 @@
         <!-- HTML Content -->
         <table>
                 <tr>
-                    <td>{{address}}</td>
-                    <td>{{phone}}</td>
+                    <td>87000 Agadir</td>
+                    <td>0651328284</td>
                 </tr>
                 <tr>
-                    <td>{{city}} {{state}},</td>
-                    <td>{{email}}</td>
+                    <td>Agadir Souss Massa,</td>
+                    <td>tourly@contact.com</td>
                 </tr>
                 <tr>
-                    <td>{{zipcode}}</td>
-                    <td>{{website}}</td>
+                    <td>87000</td>
+                    <td>www.tourly.com</td>
                 </tr>
         </table>
     
@@ -49,36 +49,22 @@
         <table>
             <tr>
      
-                <th>Product</th>
+                <th>Offer</th>
                 <th>Price</th>
-                <th>Quantity</th>
+                <th>Nombre des personnes</th>
                 <th>Total</th>
             </tr>
             <tr>
      
-                <td>Hosting Plan</td>
-                <td>$7.99</td>
-                <td>2</td>
-                <td>$15.98</td>
-            </tr>
-            <tr>
-     
-                <td>consultation </td>
-                <td>$225</td>
-                <td>1</td>
-                <td>$225</td>
-            </tr>
-            <tr>
-     
-                <td>Service Hours</td>
-                <td>$189</td>
-                <td>45.7</td>
-                <td>$8637.30</td>
+                <td>{{title}}</td>
+                <td>{{prix}}</td>
+                <td>{{nbpersonne}}</td>
+                <td>{{prixTotal}}</td>
             </tr>
         </table>
     
         <hr>
     
-        <p><strong>Total: $8878.28</strong></p>
+        <p><strong>Total: ${{prixTotal}}</strong></p>
     </body>
     </html>
