--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -220,7 +220,7 @@
                             <span>/ per person</span>
                           </p>
         
-                          <button class="btn btn-secondary">Book Now</button>
+                          <a class="btn btn-secondary" href="{% url 'offer_details' offer.id %}">Consulter</a>
         
                         </div>
         
