--- a/templates/admindashboard/client.html
+++ b/templates/admindashboard/client.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Corona Admin</title>
+    <title>Admin Dashboard</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="{% static 'assets/vendors/mdi/css/materialdesignicons.min.css'%}">
     <link rel="stylesheet" href="{% static 'assets/vendors/css/vendor.bundle.base.css'%}">
@@ -24,7 +24,7 @@
     <!-- Layout styles -->
     <link rel="stylesheet" href="{% static 'assets/css/style.css'%}">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="{% static 'assets/images/favicon.png'%}" />
+    <link rel="shortcut icon" href="{% static 'images/favicon.svg' %}" type="image/svg+xml">
   </head>
   <body>
     <div class="container-scroller">
@@ -63,7 +63,8 @@
                           {% for client in clients %}
                             <tr>
                               <td> {{ client.id }} </td>
-                              <td> {{ client.first_name }} {{ client.last_name }} </td>
+                              <td> <img src="{{ client.image.url }}" alt="" />
+                                {{ client.first_name }} {{ client.last_name }} </td>
                               <td> {{ client.email }} </td>
                               <td class="{% if client.is_active %}text-primary{% else %}text-danger{% endif %}">
                                 {% if client.is_active %}
