--- a/templates/admindashboard/navbar.html
+++ b/templates/admindashboard/navbar.html
@@ -98,7 +98,7 @@
         <li class="nav-item dropdown">
           <a class="nav-link" id="profileDropdown" href="#" data-toggle="dropdown">
             <div class="navbar-profile">
-              <img class="img-xs rounded-circle" src="{% static 'assets/images/faces/face15.jpg'%}" alt="">
+              <img class="img-xs rounded-circle" src="{{ request.user.image.url }}" alt="">
               <p class="mb-0 d-none d-sm-block navbar-profile-name">{{request.user.first_name}} {{ request.user.last_name}}</p>
               <i class="mdi mdi-menu-down d-none d-sm-block"></i>
             </div>
