--- a/templates/admindashboard/settings.html
+++ b/templates/admindashboard/settings.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Corona Admin</title>
+    <title>Admin Dashboard</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="{% static 'assets/vendors/mdi/css/materialdesignicons.min.css'%}">
     <link rel="stylesheet" href="{% static 'assets/vendors/css/vendor.bundle.base.css'%}">
@@ -23,7 +23,7 @@
     <!-- Layout styles -->
     <link rel="stylesheet" href="{% static 'assets/css/style.css'%}">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="{% static 'assets/images/favicon.png'%}" />
+    <link rel="shortcut icon" href="{% static 'images/favicon.svg' %}" type="image/svg+xml">
   </head>
   <body>
     <div class="container-scroller">
@@ -41,7 +41,7 @@
                     <div class="card">
                       <div class="card-body">
                         <h4 class="card-title">Personnel Information</h4>
-                        <form class="forms-sample" method="POST" action="{% url 'update_profile' %}">
+                        <form class="forms-sample" method="POST" action="{% url 'update_profile' %}" enctype="multipart/form-data">
                           {% csrf_token %}
                           <div class="form-group">
                             <label for="exampleInputFirstName">First Name</label>
@@ -57,7 +57,7 @@
                           </div>
                           <div class="form-group">
                             <label>Profile Picture Update</label>
-                            <input type="file" name="img[]" class="file-upload-default">
+                            <input type="file" name="image" class="file-upload-default">
                             <div class="input-group col-xs-12">
                               <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Image">
                               <span class="input-group-append">
