--- a/templates/clientdashboard/navbar.html
+++ b/templates/clientdashboard/navbar.html
@@ -41,7 +41,7 @@
                                     <ul class="nav navbar-nav mai-top-nav header-right-menu">
                                         <li class="nav-item">
                                             <a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle">
-                                                    <img src="img/product/pro4.jpg" alt="" />
+                                                    <img src="{{ request.user.image.url }}" alt="" />
                                                     <span class="admin-name">{{request.user.first_name}} {{request.user.last_name}}</span>
                                                     <i class="fa fa-angle-down edu-icon edu-down-arrow"></i>
                                                 </a>
